[paper] Add sections and remove biography

--- a/paper/Sensor Network Virtualization for Cloud-based Remote Sensing.tex
+++ b/paper/Sensor Network Virtualization for Cloud-based Remote Sensing.tex
@@ -636,10 +636,13 @@ WiFi Direct is a technology that its goal is to improve direct device to device 
 \section{Solution}
 
 
+\section{Performance evaluation}
+
+
 \section{Conclusion}
-The conclusion goes here.
 
 
+\section{Further work}
 
 
 
@@ -670,9 +673,9 @@ Appendix two text goes here.
 
 % use section* for acknowledgment
 \section*{Acknowledgment}
-We would like to thank Dr. Bechir Hamdaoui for his advising. We also would like to thank Sherif Abelwahab for his advising.
+We would like to thank Dr. Bechir Hamdaoui for his advising. We also would like to thank Sherif Abelwahab for providing useful information and answers to our questions in numerous discussions.
 
-The authors would like to thank...
+%The authors would like to thank...
 
 
 % Can use something like this to put references on a page
@@ -740,22 +743,22 @@ IEEE Wireless Communications Magazine
 %\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{mshell}}]{Michael Shell}
 % or if you just want to reserve a space for a photo:
 
-\begin{IEEEbiography}{Michael Shell}
-Biography text here.
-\end{IEEEbiography}
+%\begin{IEEEbiography}{Michael Shell}
+%Biography text here.
+%\end{IEEEbiography}
 
 % if you will not have a photo at all:
-\begin{IEEEbiographynophoto}{John Doe}
-Biography text here.
-\end{IEEEbiographynophoto}
+%\begin{IEEEbiographynophoto}{John Doe}
+%Biography text here.
+%\end{IEEEbiographynophoto}
 
 % insert where needed to balance the two columns on the last page with
 % biographies
 %\newpage
 
-\begin{IEEEbiographynophoto}{Jane Doe}
-Biography text here.
-\end{IEEEbiographynophoto}
+%\begin{IEEEbiographynophoto}{Jane Doe}
+%Biography text here.
+%\end{IEEEbiographynophoto}
 
 % You can push biographies down or up by placing
 % a \vfill before or after them. The appropriate
