[paper] Add sections / index terms

--- a/paper/Sensor Network Virtualization for Cloud-based Remote Sensing.tex
+++ b/paper/Sensor Network Virtualization for Cloud-based Remote Sensing.tex
@@ -445,7 +445,7 @@ In real world, the actual network infrastructure can be dynamic. With the help o
 
 % Note that keywords are not normally used for peerreview papers.
 \begin{IEEEkeywords}
-IEEEtran, journal, \LaTeX, paper, template.
+gossip protocol, internet of things, sensor networks, virtual sensor networks, distributed protocol, mesh networks.
 \end{IEEEkeywords}
 
 
@@ -670,15 +670,18 @@ To solve the goals outlined in section~\ref{sec:problem} and implement them in n
 \subsection{Gossip protocol implementation}
 \textcolor{red}{TODO: Make sure gossip protocol is introduced and pseudo code is given and explained}
 
-\section{Performance evaluation}
+\subsection{Gathering results}
+\textcolor{red}{TODO: Talk about topology file creation and workflow}
 
+\section{Performance evaluation}
+\textcolor{red}{TODO: Explain graphs based on used parameters, discuss and compare to expected result}
 
 \section{Conclusion}
 
 
 \section{Further work}
-
-
+% Maybe the hop-update extension?
+% #links vs #nodes...
 
 % if have a single appendix:
 %\appendix[Proof of the Zonklar Equations]
