Update results. 1000 and above still running... :(

--- a/paper/Sensor Network Virtualization for Cloud-based Remote Sensing.tex
+++ b/paper/Sensor Network Virtualization for Cloud-based Remote Sensing.tex
@@ -676,6 +676,9 @@ To solve the goals outlined in section~\ref{sec:problem} and implement them in n
 \section{Performance evaluation}
 \textcolor{red}{TODO: Explain graphs based on used parameters, discuss and compare to expected result}
 
+%Time seems a bad indicator because it only depends on gossipInterval and random fluctuations.
+%Hops with 1 iteration. At least fluctuations of 2%
+
 \section{Conclusion}
 
 
