--- a/paper/Sensor Network Virtualization for Cloud-based Remote Sensing.tex
+++ b/paper/Sensor Network Virtualization for Cloud-based Remote Sensing.tex
@@ -482,7 +482,7 @@ gossip protocol, internet of things, sensor networks, virtual sensor networks, d
 % Here we have the typical use of a "T" for an initial drop letter
 % and "HIS" in caps to complete the first word.
 \IEEEPARstart
-Along with the development of the internet technology, the price of the broadband connectivity becomes affordable. Devices are trending to be  smaller and more powerful. People start to explore a way to connect devices to the network for better control and monitor the status of them. Devices such as smartphone, smartwatch, and smart thermostats are able to connect to a network and these devices could communicate with each other. If these devices are connected to the Internet, we call it the \textit{Internet of Things}. There is no doubt that IoT is an innovative paradigm \cite{Atzori} because this idea combined the Internet with our everyday gadgets. Either from the perspective of private user or from the perspective of business user, there are infinite possible ways to exploit IoT. As of today, research in the area of IoT is emerging rapidly and many open questions remain to be answered.
+{A}{long} with the development of the internet technology, the price of the broadband connectivity becomes affordable. Devices are trending to be  smaller and more powerful. People start to explore a way to connect devices to the network for better control and monitor the status of them. Devices such as smartphone, smartwatch, and smart thermostats are able to connect to a network and these devices could communicate with each other. If these devices are connected to the Internet, we call it the \textit{Internet of Things}. There is no doubt that IoT is an innovative paradigm \cite{Atzori} because this idea combined the Internet with our everyday gadgets. Either from the perspective of private user or from the perspective of business user, there are infinite possible ways to exploit IoT. As of today, research in the area of IoT is emerging rapidly and many open questions remain to be answered.
 
 Remote sensing is one of the possible services of IoT. Remote sensing involves the search and selection of IoT devices to form a virtual sensor network. Subsequently, the selected devices estimate the wanted property collaboratively and report the result to the remote cloud agent. IoT assigns a unique MAC address to physical object which do not have an identification, so people could track the specific object’s status and control it remotely. The advantage of remote control is that it requires less manpower needed to monitor and manage the object. And it could further increase devices usage rate.
 
@@ -678,6 +678,31 @@ To solve the goals outlined in section~\ref{sec:problem} and implement them in n
 
 %Time seems a bad indicator because it only depends on gossipInterval and random fluctuations.
 %Hops with 1 iteration. At least fluctuations of 2%
+%simulation, iteration, nodes
+%gathering
+%
+
+\begin{figure}
+ \centering
+% \includegraphics[width=2.5in]{figs/avgmsg}
+ \caption{The average number of messages each node sent over the duration of a whole simulation.}
+ \label{fig:avgmsg}
+\end{figure}
+
+\begin{figure}
+ \centering
+% \includegraphics[width=2.5in]{figs/maxhops}
+ \caption{The maximum amount of hops the message experienced over the duration of a whole simulation.}
+ \label{fig:maxhops}
+\end{figure}
+
+\begin{figure}
+ \centering
+% \includegraphics[width=2.5in]{figs/maxtime}
+ \caption{The maximum time it took for the message to spread to all nodes for a simulation.}
+ \label{fig:maxtime}
+\end{figure}
+
 
 \section{Conclusion}
 
