Revert last commit...
Several portions of the tex file disappeared and I can no longer commit without overwriting the changes.

Try to do a ``$git pull`` before every commit and push

--- a/paper/Sensor Network Virtualization for Cloud-based Remote Sensing.tex
+++ b/paper/Sensor Network Virtualization for Cloud-based Remote Sensing.tex
@@ -351,7 +351,7 @@
 % (Unless specifically asked to do so by the journal or conference you plan
 % to submit to, of course. )
 
-\usepackage{listings}
+
 % correct bad hyphenation here
 \hyphenation{op-tical net-works semi-conduc-tor}
 
@@ -482,9 +482,9 @@ gossip protocol, internet of things, sensor networks, virtual sensor networks, d
 % Here we have the typical use of a "T" for an initial drop letter
 % and "HIS" in caps to complete the first word.
 \IEEEPARstart
-+{A}{long} with the development of the internet technology, the price of the broadband connectivity becomes affordable. Devices are trending to be  smaller and more powerful. People start to explore a way to connect devices to the network for better control and monitor the status of them. Devices such as smartphone, smartwatch, and smart thermostats are able to connect to a network and these devices could communicate with each other. If these devices are connected to the Internet, we call it the \textit{Internet of Things}. There is no doubt that IoT is an innovative paradigm \cite{Atzori} because this idea combined the Internet with our everyday gadgets. Either from the perspective of private user or from the perspective of business user, there are infinite possible ways to exploit IoT. As of today, research in the area of IoT is emerging rapidly and many open questions remain to be answered.
+{A}{long} with the development of the internet technology, the price of the broadband connectivity becomes affordable. Devices are trending to be  smaller and more powerful. People start to explore a way to connect devices to the network for better control and monitor the status of them. Devices such as smartphone, smartwatch, and smart thermostats are able to connect to a network and these devices could communicate with each other. If these devices are connected to the Internet, we call it the \textit{Internet of Things}. There is no doubt that IoT is an innovative paradigm \cite{Atzori} because this idea combined the Internet with our everyday gadgets. Either from the perspective of private user or from the perspective of business user, there are infinite possible ways to exploit IoT. As of today, research in the area of IoT is emerging rapidly and many open questions remain to be answered.
 
-Remote sensing is one of the possible services of IoT. Remote sensing allows us to get the data from the device through the network instead of physically read the data. Remote sensing involves the search and selection of IoT devices to form a virtual sensor network. Subsequently, the selected devices estimate the wanted property collaboratively and report the result to the remote cloud agent. IoT assigns a unique MAC address to physical object which do not have an identification, so people could track the specific object’s status and control it remotely. The advantage of remote control is that it requires less manpower needed to monitor and manage the object. And it could further increase devices usage rate.
+Remote sensing is one of the possible services of IoT. Remote sensing involves the search and selection of IoT devices to form a virtual sensor network. Subsequently, the selected devices estimate the wanted property collaboratively and report the result to the remote cloud agent. IoT assigns a unique MAC address to physical object which do not have an identification, so people could track the specific object’s status and control it remotely. The advantage of remote control is that it requires less manpower needed to monitor and manage the object. And it could further increase devices usage rate.
 
 However, the main challenge here is that IoT devices are often resource limited meaning they have limited bandwidth and power, and restricted by their mobility. Due to the characteristics of IoT devices, topology of physical network formed from IoT is dynamic. The distributed network protocol which virtualizing the physical network has to deal with this dynamic nature of IoT networks.
 
@@ -667,46 +667,38 @@ To solve the goals outlined in section~\ref{sec:problem} and implement them in n
 \subsection{ICMP extension}
 \textcolor{red}{TODO: Explain changes made to code and summarize bulletpoints from presentation}
 
-\subsection{Gossip protocol }
-\textcolor{red}{TODO: Make sure gossip protocol is introduced and pseudo code is given and explained}\\
-Gossip protocol is an computer comunication protocol which inspired by the social activity -- gossip. This protocol suit for the synchronize  the message in the system which do not need the realtime synchronization. It provide O(logn) time to synchronize the message to the network, n means the number of nodes in the network. There are three packet type for the message protocol: data packet, ACK packet and request packet. The data packet contains the message from a certain source node who want to spread this message to the whole network. ACK packet is a packet to notice the node that the destination alread contain the mesaage. The request packet is the packet which request the message from destination node. There are two state for each node, running and stop.\\
-The pseudo code of gossip algorithm\\
-
-Behaviour of the node:
-	switch(state):
-    	case running:
-        	if message is not null:
-            	every 1 millisecond:
-                	find a random neighbor
-                 	send data packet to random neightbor
-                  	if receive a packet:
-                      	if pakcet is ACK:
-                          	state <- stop
-         	else:
-           		if receive a packet:
-                	if packet is a data packet:
-                    	update the message to the content of data packet
-                every 5 second:
-                	find a random neighbor
-                    send a request packet to the neighbor
-                    if receive a packet:
-                    	if packet is a data packet:
-                        	update the message to the content of data packet 
-                    
-        
-        case stop:
-			if receive a packet:
-                	if pakcet is request:
-                    	send data to the node who send the packet
-                    if packet is data:
-                    	send ACK to the node who send the packet
-\\
-The explaination of the pseudo code:                        
-All the node in network have same behaviour and they are all independent. When we want to spread a message x to the whole network, we assign the x to message and run this algorithm. node 1 start with running state, and node 1 has a message x, so it will find a random neighbor every one millisecond and send a data packet which contain message x to its random neighbor. If node 1 receive a ACK packet it will go to stop state, otherwise it will keep doing these steps. Other nodes which do not have the message x will wait for packet, if a node 1 send a data packet to the node 2 which do not have message x, node 2 will update the message in node 2 and not return anything to node 1. if node 2 do not have message 2, it will send a request packet to a random neighbor every 5 second. If node 2 receive a data packet after sedning the request packet, it will update its message to x. The nodes in stop state would always waiting for other node send message to it and it will send data packet or ACK packet back depends on what packet it receive.
-
+\subsection{Gossip protocol implementation}
+\textcolor{red}{TODO: Make sure gossip protocol is introduced and pseudo code is given and explained}
 
 \subsection{Gathering results}
-\textcolor{red}{TODO: Talk about topology file creation and workflow}
+
+To evaluate the performance of the gossip protocol, we use several randomly generated topology files with the number of nodes as variable. Those topology files are derived from a random geometric graph network, which was created by uniformly and randomly placing nodes into a space and then connect nodes whose distance is smaller than some given radius.
+
+\begin{figure}
+ \centering
+ \begin{verbatim*}#Nodes
+0
+1
+2
+#Edges
+(0, 1)
+(1, 2)\end{verbatim*}
+ \caption{A topology file of a linear topology with three nodes.}
+ \label{fig:topsimple}
+\end{figure}
+
+
+Each topology file contains the number of nodes as well as all the edges, which are connections between nodes. As an example, the content of a simple topology file is shown in figure~\ref{fig:topsimple}. We wrote a parser in C++ to create the given number of nodes in ns-3 and installed the gossip protocol application on them. Thereafter, all edges are parsed and created accordingly. Each node holds an ns3 Ipv4Interface for every connection and stores the address of his interface and the one of his neighbors interface.
+
+For our simulation, we set the link rate for all connections to 100~Mbps and the link delay to 2~ms. Also, all nodes are instructed to execute the gossip process of sending out data periodically every 5~ms. The interval of requesting new data is set to 5~s.
+
+To allow the performance analysis, all nodes count the number of icmp messages they sent. Also, they track how many hops the data message experienced before reaching them and they record the time when they received the data message.
+
+For the analysis, we collect the information from the nodes and determine the average amount of icmp messages sent. Moreover, the highest number of reported hops is saved, as well as how long it took for the message to reach the ``last'' node.
+
+This information is determined and stored for each of the several hundred topology files.
+
+Finally, we post-process the collected data to produce meaningful plots.
 
 \section{Performance evaluation}
 \textcolor{red}{TODO: Explain graphs based on used parameters, discuss and compare to expected result}
@@ -720,7 +712,7 @@ All the node in network have same behaviour and they are all independent. When w
 \begin{figure}
  \centering
 % \includegraphics[width=2.5in]{figs/avgmsg}
- \caption{The average number of messages each node sent over the uration of a whole simulation.}
+ \caption{The average number of messages each node sent over the duration of a whole simulation.}
  \label{fig:avgmsg}
 \end{figure}
 
@@ -737,6 +729,7 @@ All the node in network have same behaviour and they are all independent. When w
  \caption{The maximum time it took for the message to spread to all nodes for a simulation.}
  \label{fig:maxtime}
 \end{figure}
+
 
 \section{Conclusion}
 
